card height fix - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -2489,7 +2489,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 134px;
+                                height: 104px;
                             }
                         }
                     }
@@ -2551,7 +2551,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 134px;
+                                height: 125px;
                             }
                         }
                     }
@@ -3478,7 +3478,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 134px;
+                                height: 100px;
                             }
                         }
                     }
